# agent-reliability-arena

./: .gitignore  CHANGELOG.md  CITATION.cff  CI_VERIFICATION.md  EMPLOYER_REVIEW.md  LAUNCH.md  LICENSE  README.md  RELEASE.md  RESULTS.md  ROADMAP.md  SECURITY.md  SHOWCASE.md  VENDORED_VERIFIER.md  pyproject.toml  vendor_snapshot.json
.github/: dependabot.yml
.github/workflows/: apply-cyclonedx-attestation-fix.yml  apply-cyclonedx-python310-fix.yml  apply-rc2-patch.yml  apply-rc2-reference-restore.yml  bootstrap-release.yml  codeql.yml  diagnose-employer-layer.yml  diagnose-published-verifier-env.yml  launch-hash-capture.yml  launch-package-diagnostic.yml  one-time-fold-disclosure-fix.yml  pages.yml  rc2-branch-snapshot.yml  rc2-test-diagnostic.yml  release.yml  restore-reference-evidence.yml  showcase-hash-capture.yml  showcase-test-diagnostic.yml  supply-chain-hash-capture.yml  tests.yml  verify-published-release.yml  verify-rc2-final-release.yml  verify-rc2-post-release.yml
citation/: provenance.json
docs/: .keep-cleanup-sentinel  COMMUNITY_SUBMISSIONS.md  CONTRIBUTION.md  CV_PROJECT_ENTRY.md  DEMO_SCRIPT.md  DISCLOSURE_BOUNDARY.md  EMPLOYER_TECHNICAL_SUMMARY.md  HOSTED_DEPLOYMENT.md  LAUNCH_POSTS.md  LIVE_MODEL_TRANSPORT.md  METHODOLOGY.md  PORTFOLIO_PROJECT_ENTRY.md  PRIVATE_PILOT_RUNBOOK.md  PROJECT_STATUS.md  PUBLICATION_BOUNDARY.md  RECRUITER_OUTREACH.md  RELEASE_CANDIDATE_CHECKLIST.md  RELEASE_NOTES_v0.2.0rc1.md  RELEASE_NOTES_v0.2.0rc2.md  REPEATED_EXPERIMENT_RUNBOOK.md  REPRODUCIBILITY.md  SHOWCASE_DEMO_SCRIPT.md  SUPPLY_CHAIN_SECURITY.md  TECHNICAL_REPORT.md  THREAT_MODEL.md  VERIFY_PUBLISHED_RELEASE.md
examples/: fixture_experiment.json  live_prompt_catalog.json  pilot_policy.disabled.json
portfolio/: index.html  script.js  styles.css  v3.css  v3.js
reference_runs/fixture-v1/: aggregate_metrics.json  config.json  manifest.json  paired_results.jsonl  report.md
release/: github-prerelease.json
release/rc2-patch/: part-00  part-01  part-02  part-03  (+2 more)
scripts/: run_private_pilot.py  stage_pages_site.py  verify_citation_package.py  verify_disclosure_release.py  verify_github_prerelease.py  verify_launch_package.py  verify_published_release.py  verify_release.py  verify_repeated_release.py  verify_showcase_release.py  verify_supply_chain.py
security/: sbom.cdx.json  supply-chain-manifest.json
showcase/: distribution-register.json  launch-package-manifest.json  publication-manifest.json
tests/: helpers.py  test_artifacts.py  test_citation_package.py  test_cli.py  test_config.py  test_disclosure_export.py  test_documentation.py  test_employer_review.py  test_external_execution_boundary.py  test_fairness.py  test_general.py  test_github_prerelease.py  test_launch_package.py  test_live_orchestration.py  test_live_requests.py  test_live_role_outputs.py  test_metrics.py  test_pages_site.py  test_pilot_policy.py  test_private_pilot.py  test_private_pilot_order.py  test_private_pilot_script.py  test_published_release.py  test_published_release_workflow.py  test_release.py  test_repeated_analysis.py  test_repeated_plan.py  test_repeated_release.py  test_repeated_runner.py  test_replay.py  test_schemas.py  test_showcase_cli.py  test_showcase_hash_inventory.py  test_showcase_release.py  test_specialist.py  test_supply_chain_security.py  test_transport_ledger.py  test_transports.py  test_vendor.py  test_web.py
web/: app.js  index.html  styles.css
(+167 files in other folders)
